--- a/styles/styles.css
+++ b/styles/styles.css
@@ -22,118 +22,203 @@
 /* Video Background */
 
 #background-video {
-    position: fixed;
-    top: 0;
-    left: 0;
-    width: 100%;
-    height: 100%;
-    object-fit: cover;
-    object-position: left;
-    z-index: -1;
+  position: fixed;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  object-fit: cover;
+  object-position: left;
+  z-index: -1;
+}
+
+/* Hamburger Menu */
+
+.menu {
+  background-color: transparent;
+  border: none;
+  cursor: pointer;
+  display: flex;
+  padding: 0;
+  position: absolute;
+  top: 0;
+  right: 0;
+}
+.line {
+  fill: none;
+  stroke: #a81e22;
+  stroke-width: 6;
+  transition: stroke-dasharray 600ms cubic-bezier(0.4, 0, 0.2, 1),
+    stroke-dashoffset 600ms cubic-bezier(0.4, 0, 0.2, 1);
+}
+.line1 {
+  stroke-dasharray: 60 207;
+  stroke-width: 6;
+}
+.line2 {
+  stroke-dasharray: 60 60;
+  stroke-width: 6;
+}
+.line3 {
+  stroke-dasharray: 60 207;
+  stroke-width: 6;
+}
+.opened .line1 {
+  stroke-dasharray: 90 207;
+  stroke-dashoffset: -134;
+  stroke-width: 6;
+}
+.opened .line2 {
+  stroke-dasharray: 1 60;
+  stroke-dashoffset: -30;
+  stroke-width: 6;
+}
+.opened .line3 {
+  stroke-dasharray: 90 207;
+  stroke-dashoffset: -134;
+  stroke-width: 6;
 }
 
 
 /* Typography
 --------------------------------------------- */
 body {
-    font-family: "Raleway", sans-serif;
-    font-optical-sizing: auto;
-    font-weight: 700;
-    font-style: normal;
-  }
-  
-  h1,
-  h2,
-  h3,
-  h4,
-  h5,
-  h6 {
-    font-family: "Roboto Mono", monospace;
-    font-weight: 700;
-    font-style: normal;
-    color: antiquewhite;
-    font-size: 5rem;
-  }
-  
-h1 {
-    writing-mode: vertical-rl;
-    position: sticky;
-    left: 0;
-    top: 300px;
-    
+
 }
 
-  p {
+h1,
+h2,
+h3,
+h4,
+h5,
+h6 {
+
+}
+
+h1 {
+
+}
+
+p {
+
+}
+
+/* Elements
+--------------------------------------------- */
+ul {
+
+}
+
+/* Links
+--------------------------------------------- */
+a,
+a:visited,
+a:hover,
+a:focus,
+a:active {
+  color: antiquewhite;
+  text-decoration: none;
+}
+
+a {
+
+}
+
+a:visited {
+
+}
+
+a:hover {
+
+}
+
+ul {
+  display: flex;
+  justify-content: center;
+  gap: .5rem;
+  list-style-type: none;
+}
+
+li a {
+  padding: 1rem;
+  display: flex;
+  align-items: center;
+}
+
+/*--------------------------------------------------------------
+# Layout
+--------------------------------------------------------------*/
+html,
+body {
+  margin: 0;
+  padding: 0;
+  width: 100%;
+  overflow-x: hidden; /* Horizontal Scrolling Prevention */
+}
+
+main {
+  line-height: 1.5;
+}
+
+/*--------------------------------------------------------------
+# Components
+--------------------------------------------------------------*/
+
+/* Header
+--------------------------------------------- */
+
+header {
+  padding: 1rem;
+  background-color: black;
+}
+
+nav {
+  display: flex;
+  justify-content: space-between;
+  z-index: 10;
+}
+
+.nav-buttons {
+  display: none;
+}
+
+@media screen and (min-width: 768px) {
+  .nav-buttons {
+      display: flex;
+      gap: 1rem;
 
   }
-  
-  /* Elements
-  --------------------------------------------- */
-  ul {
+  .menu {
+      display: none;
+  }
+}
+/* Main
+--------------------------------------------- */
 
-  }
-  
-  /* Links
-  --------------------------------------------- */
-  a,
-  a:visited,
-  a:hover,
-  a:focus,
-  a:active {
-    color: antiquewhite;
-    text-decoration: none;
-  }
-  
-  a {
+.home-content {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  height: 100vh;
+  text-align: center;
+  color: antiquewhite;
+  text-shadow: 2px 2px 4px rgba(0, 0, 0, 0.5);
+  background: rgba(0, 0, 0, 0.5);
+  min-width: fit-content;
+  max-width: 30rem;
+  margin: 0 auto;
+  padding: 1rem;
+}
 
-  }
-  
-  a:visited {
-  
-  }
-  
-  a:hover {
 
-  }
 
-  ul {
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    gap: 3rem;
-    list-style-type: none;
-  }
-  
-  /*--------------------------------------------------------------
-  # Layout
-  --------------------------------------------------------------*/
-  html,
-  body {
-    margin: 0;
-    padding: 0;
-    width: 100%;
-    overflow-x: hidden; /* Horizontal Scrolling Prevention */
-  }
-  
-  main {
-    line-height: 1.5;
-  }
-  
-  /*--------------------------------------------------------------
-  # Components
-  --------------------------------------------------------------*/
-  
-  /* Header
-  --------------------------------------------- */
-  
+/* Footer
+--------------------------------------------- */
 
-  
-  /* Main
-  --------------------------------------------- */
-  
-
-  
-  /* Footer
-  --------------------------------------------- */
-  
-  
+footer {
+  background-color: black;
+  color: antiquewhite;
+  text-align: center;
+  padding: 1rem;
+}
