--- a/styles/styles.css
+++ b/styles/styles.css
@@ -32,52 +32,6 @@
   z-index: -1;
 }
 
-/* Hamburger Menu */
-
-.menu {
-  background-color: transparent;
-  border: none;
-  cursor: pointer;
-  display: flex;
-  padding: 0;
-  position: absolute;
-  top: 0;
-  right: 0;
-}
-.line {
-  fill: none;
-  stroke: #a81e22;
-  stroke-width: 6;
-  transition: stroke-dasharray 600ms cubic-bezier(0.4, 0, 0.2, 1),
-    stroke-dashoffset 600ms cubic-bezier(0.4, 0, 0.2, 1);
-}
-.line1 {
-  stroke-dasharray: 60 207;
-  stroke-width: 6;
-}
-.line2 {
-  stroke-dasharray: 60 60;
-  stroke-width: 6;
-}
-.line3 {
-  stroke-dasharray: 60 207;
-  stroke-width: 6;
-}
-.opened .line1 {
-  stroke-dasharray: 90 207;
-  stroke-dashoffset: -134;
-  stroke-width: 6;
-}
-.opened .line2 {
-  stroke-dasharray: 1 60;
-  stroke-dashoffset: -30;
-  stroke-width: 6;
-}
-.opened .line3 {
-  stroke-dasharray: 90 207;
-  stroke-dashoffset: -134;
-  stroke-width: 6;
-}
 
 
 /* Typography
@@ -164,6 +118,63 @@ main {
 # Components
 --------------------------------------------------------------*/
 
+/* Hamburger Menu */
+
+#hamMenu {
+  background-color: transparent;
+  border: none;
+  cursor: pointer;
+  display: flex;
+  padding: 0;
+  position: absolute;
+  top: 0;
+  right: 0;
+}
+.line {
+  fill: none;
+  stroke: #a81e22;
+  stroke-width: 6;
+  transition: stroke-dasharray 600ms cubic-bezier(0.4, 0, 0.2, 1),
+    stroke-dashoffset 600ms cubic-bezier(0.4, 0, 0.2, 1);
+}
+.line1 {
+  stroke-dasharray: 60 207;
+  stroke-width: 6;
+}
+.line2 {
+  stroke-dasharray: 60 60;
+  stroke-width: 6;
+}
+.line3 {
+  stroke-dasharray: 60 207;
+  stroke-width: 6;
+}
+.opened .line1 {
+  stroke-dasharray: 90 207;
+  stroke-dashoffset: -134;
+  stroke-width: 6;
+}
+.opened .line2 {
+  stroke-dasharray: 1 60;
+  stroke-dashoffset: -30;
+  stroke-width: 6;
+}
+.opened .line3 {
+  stroke-dasharray: 90 207;
+  stroke-dashoffset: -134;
+  stroke-width: 6;
+}
+
+.hamburger {
+  background-color: transparent;
+  border: none;
+  padding: 0;
+  position: absolute;
+  top: .5rem;
+  right: 0;
+}
+
+
 /* Header
 --------------------------------------------- */
 
@@ -178,20 +189,43 @@ nav {
   z-index: 10;
 }
 
-.nav-buttons {
+#nav-buttons {
   display: none;
 }
 
+#nav-buttons.toggled {
+  display: flex;
+  flex-direction: column;
+  gap: 1rem;
+  position: absolute;
+  top: 4rem;
+  right: 0;
+  background-color: black;
+  padding: 1rem;
+  z-index: 5;
+}
+
+
+.main-title {
+  max-width: 12.5rem;
+  align-content: center;
+  margin-top: .5rem;
+  margin-left: .5rem;
+}
+
 @media screen and (min-width: 768px) {
-  .nav-buttons {
+  #nav-buttons {
       display: flex;
       gap: 1rem;
 
   }
-  .menu {
+  #hamMenu {
       display: none;
   }
 }
+
+
+
 /* Main
 --------------------------------------------- */
 
@@ -204,14 +238,12 @@ nav {
   text-align: center;
   color: antiquewhite;
   text-shadow: 2px 2px 4px rgba(0, 0, 0, 0.5);
-  background: rgba(0, 0, 0, 0.5);
-  min-width: fit-content;
-  max-width: 30rem;
+  background: transparent;
+  /* min-width: fit-content; */
+  max-width: 40rem;
   margin: 0 auto;
   padding: 1rem;
 }
-
-
 
 /* Footer
 --------------------------------------------- */
