--- a/styles/styles.css
+++ b/styles/styles.css
@@ -37,7 +37,9 @@
 /* Typography
 --------------------------------------------- */
 body {
-
+  font-family: "Mukta Vaani", sans-serif;
+  font-weight: 600;
+  font-style: normal;
 }
 
 h1,
@@ -46,8 +48,11 @@ h3,
 h4,
 h5,
 h6 {
-
+  font-family: "Libre Franklin", sans-serif;
+  font-style: italic;
+  font-weight: 800;
 }
+
 
 h1 {
 
@@ -56,6 +61,7 @@ h1 {
 p {
 
 }
+
 
 /* Elements
 --------------------------------------------- */
@@ -132,7 +138,7 @@ main {
 }
 .line {
   fill: none;
-  stroke: #a81e22;
+  stroke: #FF5D73;
   stroke-width: 6;
   transition: stroke-dasharray 600ms cubic-bezier(0.4, 0, 0.2, 1),
     stroke-dashoffset 600ms cubic-bezier(0.4, 0, 0.2, 1);
@@ -181,12 +187,16 @@ main {
 header {
   padding: 1rem;
   background-color: black;
+  box-shadow: 0 0 10px 10px rgba(0, 0, 0, 0.2); /* Feathered edge */
+  border-radius: 10px; /* Rounded corners */
 }
 
 nav {
   display: flex;
   justify-content: space-between;
   z-index: 10;
+  font-family: "Libre Franklin", sans-serif;
+  font-weight: 700;
 }
 
 #nav-buttons {
@@ -234,15 +244,22 @@ nav {
   flex-direction: column;
   justify-content: center;
   align-items: center;
-  height: 100vh;
+  min-height: 100vh;
   text-align: center;
   color: antiquewhite;
   text-shadow: 2px 2px 4px rgba(0, 0, 0, 0.5);
   background: transparent;
-  /* min-width: fit-content; */
   max-width: 40rem;
   margin: 0 auto;
   padding: 1rem;
+}
+
+.home-content h2,
+.home-content p {
+  background-color: rgba(0, 0, 0, 0.5);
+  padding: 1rem;
+  box-shadow: 0 0 10px 10px rgba(0, 0, 0, 0.2); /* Feathered edge */
+  border-radius: 10px; /* Rounded corners */
 }
 
 /* Footer
@@ -250,6 +267,8 @@ nav {
 
 footer {
   background-color: black;
+  box-shadow: 0 0 10px 10px rgba(0, 0, 0, 0.2); /* Feathered edge */
+  border-radius: 10px; /* Rounded corners */
   color: antiquewhite;
   text-align: center;
   padding: 1rem;
