--- a/styles/base.css
+++ b/styles/base.css
@@ -47,6 +47,7 @@ h6 {
   font-family: "Libre Franklin", sans-serif;
   font-style: italic;
   font-weight: 800;
+  color: antiquewhite;
 }
 
 /* Links
