--- a/styles/base.css
+++ b/styles/base.css
@@ -59,7 +59,7 @@ a:focus,
 a:active {
   color: antiquewhite;
   text-decoration: none;
-  background-color: #d10000;
+  background-color: #F12B3B;
   border-radius: 10%;
   transition: ease-in-out 0.1s;
 }
@@ -134,7 +134,7 @@ footer {
 }
 .line {
   fill: none;
-  stroke: #d10000;
+  stroke: #F12B3B;
   stroke-width: 6;
   transition: stroke-dasharray 600ms cubic-bezier(0.4, 0, 0.2, 1),
     stroke-dashoffset 600ms cubic-bezier(0.4, 0, 0.2, 1);
