prelim sorting of foods page, added quote background

--- a/styles/attractions.css
+++ b/styles/attractions.css
@@ -14,7 +14,7 @@
     background-color: rgba(0,0,0,0.5);
     margin: 40% auto; /* 15% from the top and centered */
     padding: 20px;
-    border: 1px solid #888;
+    border: 1px solid #F12B3B;
     width: 19rem; /* Could be more or less, depending on screen size */
   }
   
@@ -50,14 +50,6 @@ p {
 }
 
 
-h2 {
-    font-size: 2rem;
-    text-align: center;
-    margin: 2rem 0;
-    font-style: normal;
-    text-transform: uppercase;
-  }
-
 .attractions-content h3 {
     text-align: center;
     font-style: normal;
@@ -87,7 +79,7 @@ h2 {
 @media screen and (min-width: 62.5rem) {
 
     .attractions-content {
-        margin: 1rem auto;   
+        margin: 5% auto;   
         display: grid;
         grid-template-columns: repeat(4, 20rem);
         grid-template-rows: repeat(1, 25rem);
