--- a/styles/credits.css
+++ b/styles/credits.css
@@ -1,18 +1,21 @@
 table {
     color: antiquewhite;
     margin: 0 auto;
+    min-width: 20rem;
 }
 
 table, th {
     border: 2px solid antiquewhite; 
     border-collapse: collapse; 
     padding: 8px; 
+    text-shadow: 2px 2px 2px rgba(0, 0, 0, 0.5);
   }
 
 h2 {
     color: antiquewhite;
     text-align: center;
     margin: 1rem auto;
+    text-shadow: 2px 2px 2px rgba(0, 0, 0, 0.5);
 }
 
 .subscribe-form {
