--- a/styles/food.css
+++ b/styles/food.css
@@ -1,7 +1,52 @@
-p,
-cite {
-    color: antiquewhite;
+/* Quote Content */
+
+.quote {
+    background-image: url('../media/bourdain.jpeg'); 
+    background-size: cover; 
+    background-position: center;
+    filter:grayscale(90%);
+    padding: 20px;
+    margin: 2rem;
+    width: 45rem;
+    height: 25rem;
+    margin-left: auto;
+    margin-right: auto;
+    text-align: center;
+    text-shadow: 2px 2px 2px rgba(0, 0, 0, 0.5);
+    box-shadow: 0 0 10px 10px rgba(0, 0, 0, 0.2);
+    max-width: 100%;
+    color: antiquewhite; 
 }
+
+.quote p,
+.quote cite {
+    background-color: rgba(0, 0, 0, 0.5);
+    border-radius: 10%;
+    padding: .5rem;
+    min-width: 20rem;
+}
+
+.quote p {
+    font-size: 1.5rem;
+    margin-top: 1rem;
+}
+
+@media (max-width: 450px) {
+    .quote {
+      width: 90%; /* Use a percentage width to fit within the screen */
+      height: auto; /* Allow height to adjust to content */
+      padding: 10px;
+      margin: 1rem;
+    }
+  
+    .quote p, .quote cite {
+      min-width: 100%; /* Adjust to make sure text fits within the quote */
+      font-size: 1rem; /* Reduce font size to fit content better */
+      word-break: break-word; /* Ensures long words break to fit within the container */
+    }
+  
+}
+/* Food Content */
 
 .food-content {
     display: flex;
@@ -14,7 +59,7 @@ cite {
 }
 
 .food-content img {
-    width: 10rem;
+    width: 15rem;
     height: 10rem;
     object-fit: cover;
     object-position: bottom;
@@ -22,26 +67,16 @@ cite {
     box-shadow: 0 0 10px 10px rgba(0, 0, 0, 0.2);
 }
 
-.food-item h3,
-.food-item h2 {
-    margin 0 auto;
-}
-
 .food-item {
     text-align: center;
 }
 
-.quote {
-    background-image: url('media/bourdain.jpeg'); 
-    background-size: cover; 
-    color: white; 
-    padding: 20px;
-    margin: 2rem;
-    width: 45rem;
-    height: 25rem;
-    border-radius: 10%;
-    margin-left: auto;
-    margin-right: auto;
-    text-align: left;
+h2,
+h3 {
     text-shadow: 2px 2px 2px rgba(0, 0, 0, 0.5);
+    margin: 0 auto;
+}
+
+h2 {
+    text-transform: uppercase;
 }
