--- a/styles/credits.css
+++ b/styles/credits.css
@@ -2,6 +2,7 @@ table {
     color: antiquewhite;
     margin: 0 auto;
     min-width: 20rem;
+    background-color: #78151d;
 }
 
 table, th {
@@ -27,10 +28,8 @@ h2 {
     padding: 2rem;
     box-shadow: 0 0 10px 10px rgba(0, 0, 0, 0.2);
     border-radius: 10px; 
-    position: absolute;
-    bottom: 5rem;
+    position: relative;
+    bottom: 0;
     left: 0;
     right: 0;
 }
-
-/* REDO FOR MOBILE FIRST */
