added screen reader to body/main and normalize.css

--- a/styles/attractions.css
+++ b/styles/attractions.css
@@ -59,7 +59,7 @@ p {
 
 .attractions-content img {
     width: 100%;
-    height: 100%;
+    height: 20rem;
     object-fit: cover;
     object-position: bottom;
     border-radius: 10%;
