--- a/styles/normalize-fwd.css
+++ b/styles/normalize-fwd.css
@@ -371,3 +371,26 @@ html {
 *, *:before, *:after {
 	box-sizing: inherit;
 }
+
+.screen-reader-text {
+  position: absolute;
+  width: 1px;
+  height: 1px;
+  margin: -1px;
+  padding: 0;
+  overflow: hidden;
+  clip: rect(0, 0, 0, 0);
+  border: 0;
+}
+
+.screen-reader-text:focus {
+  position: static;
+  width: auto;
+  height: auto;
+  margin: 0;
+  padding: 1rem;
+  clip: auto;
+  background: black;
+  color: white;
+  z-index: 10000; /* Ensure it's on top */
+}
