--- a/styles/about.css
+++ b/styles/about.css
@@ -7,8 +7,8 @@
   background-color: rgba(0, 0, 0, 0.5);
   color: antiquewhite;
   padding: 1rem;
-  box-shadow: 0 0 10px 10px rgba(0, 0, 0, 0.2); 
-  border-radius: 10px; 
+  box-shadow: 0 0 10px 10px rgba(0, 0, 0, 0.2);
+  border-radius: 10px;
   height: 100%;
   margin: 1rem auto;
 }
@@ -35,45 +35,50 @@ h2 {
 }
 
 .about-content img {
-    border-radius: 10px;
+  border-radius: 10px;
 }
 
 div h2 {
   text-align: center;
 }
 
-
 @media screen and (min-width: 62.5em) {
-
-.about-content {
+  .about-content {
     margin: 1rem auto;
     justify-content: center;
     display: grid;
     grid-template-columns: repeat(2, 30rem);
     grid-template-rows: repeat(3, auto);
     gap: 1rem;
-}
+  }
 
-.about-content img {
+  .about-content img {
     width: 100%;
     height: 100%;
     object-fit: cover;
     object-position: center;
-}
+  }
 
-#shinGeo {
+  #shinGeo {
     grid-column: 2 / 3;
-}
+  }
 
-div h2 {
+  div h2 {
     text-align: left;
-}
+  }
 
-.geography,
-.geography h2 {
+  .geography,
+  .geography h2 {
     grid-column: 1 / 2;
     grid-row: 2 / 3;
     text-align: right;
+  }
 }
 
+.gyoen a {
+  color: #F12B3B;
+}
+
+.gyoen a:hover {
+  color: antiquewhite;
 }
