--- a/styles/food.css
+++ b/styles/food.css
@@ -4,7 +4,7 @@
     background-image: url('../media/bourdain.jpg'); 
     background-size: cover; 
     background-position: center;
-    filter:grayscale(90%);
+    filter:grayscale(80%);
     padding: 20px;
     margin: 2rem;
     width: 45rem;
@@ -20,7 +20,6 @@
 
 .quote p,
 .quote cite {
-    background-color: rgba(0, 0, 0, 0.5);
     border-radius: 10%;
     padding: .5rem;
     min-width: 20rem;
@@ -80,3 +79,34 @@ h3 {
 h2 {
     text-transform: uppercase;
 }
+
+.food-item {
+    position: relative;
+  }
+
+  
+  .food-item .overlay {
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    background-color: rgba(49, 0, 0, 0.8); /* 80% black transparent background */
+    border-radius: 10%;
+    color: antiquewhite;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    opacity: 0;
+    transition: opacity 0.3s ease;
+  }
+  
+  .food-item:hover .overlay {
+    opacity: 1;
+  }
+  
+  .overlay-text {
+    text-align: center;
+    padding: 1rem;
+  }
+  
